--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,14 @@
 
 {
+    "plugins": [
+      "testing-library",
+      "jest-dom"
+    ],
+
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:testing-library/react",
+      "plugin:jest-dom/recommended"
     ]
 }
