--- a/package.json
+++ b/package.json
@@ -38,14 +38,19 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^14.0.0",
     "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^13.5.0",
     "eslint": "^8.36.0",
     "eslint-plugin-jest-dom": "^4.0.3",
     "eslint-plugin-testing-library": "^5.10.2",
     "prettier": "^2.8.7",
     "tailwindcss": "^3.2.4"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!(axios|swiper))"
+    ]
   },
   "proxy": "http://127.0.0.1:8080"
 }
