--- a/package.json
+++ b/package.json
@@ -44,12 +44,13 @@
     "eslint": "^8.36.0",
     "eslint-plugin-jest-dom": "^4.0.3",
     "eslint-plugin-testing-library": "^5.10.2",
+    "jest": "^27.5.1",
     "prettier": "^2.8.7",
     "tailwindcss": "^3.2.4"
   },
   "jest": {
     "transformIgnorePatterns": [
-      "node_modules/(?!(axios|swiper))"
+      "node_modules/(?!(axios|swiper|ssr-window))"
     ]
   },
   "proxy": "http://127.0.0.1:8080"
